--- a/static/style/master.css
+++ b/static/style/master.css
@@ -1239,7 +1239,7 @@ a.button:hover {
 }
 /* heartbeat animation */
 .heart{
-    margin-bottom: 140px;
+    margin-bottom: 100px;
     /* background-color: var(--main-bg); */
     border: none;
 }
@@ -1289,10 +1289,11 @@ a.button:hover {
 
 /* groom brial_picture*/
 .groom_brial_section {
-  background: #F1F3EE;
+  /* background: #F1F3EE; */
   position: relative;
   z-index: 1;
   overflow: hidden;
+  margin-bottom: 100px;
 }
 
 .groom_brial_section .groom_brial_item {
@@ -1331,6 +1332,7 @@ a.button:hover {
   -ms-flex-preferred-size: 60%;
       flex-basis: 60%;
   text-align: center;
+ /* padding: 100px 0; */
 }
 
 @media (max-width: 1399px) {
@@ -1364,10 +1366,10 @@ a.button:hover {
 
 
 .groom_brial_section .groom_brial_item .groom_brial_img-wrap .groom_brial_story_img {
-  /* padding: 20px; */
+  padding: 10px; 
   margin: 0 auto;
-  /* background: #fff; */
-  max-width: 450px;
+  background: #fff;
+  max-width: 90%;
 }
 
 @media (max-width: 1199px) {
@@ -1376,18 +1378,18 @@ a.button:hover {
   }
 }
 
-.groom_brial_section .groom_brial_item .groom_brial_img-wrap .clip-shape1 {
+/* .groom_brial_section .groom_brial_item .groom_brial_img-wrap .clip-shape1 {
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   top: -25px;
   z-index: -1;
-}
+} */
 
 .groom_brial_section .groom_brial_item .groom_brial_img-wrap .couple_img_shape {
   position: absolute;
-  width: 80%;
+  width: 60%;
   left: 50%;
   top: 50%;
   z-index: -11;
@@ -1399,7 +1401,7 @@ a.button:hover {
   .groom_brial_section .groom_brial_item .groom_brial_img-wrap .couple_img_shape {
     width: 105%;
     max-width: 450px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
   }
 }
 
@@ -1529,7 +1531,7 @@ a.button:hover {
 
 @media (max-width: 575px) {
   .groom_brial_section .groom_brial_item:first-child {
-    padding-top: 20px;
+    padding-top: 80px;
   }
 }
 .groom_brial_section .groom_brial_item:nth-child(even) .groom_brial_img-wrap {
@@ -1696,7 +1698,8 @@ a.button:hover {
   background: #F1F3EE;
   position: relative;
   z-index: 1;
-  overflow: hidden;
+  overflow: visible;
+  /* padding-bottom: 200px */
 }
 
 .couple_story_section .couple_story_item {
@@ -1711,7 +1714,7 @@ a.button:hover {
 
 @media (max-width: 1199px) {
   .couple_story_section .couple_story_item {
-    padding-top: 100px;
+    padding-top: 60px;
   }
 }
 
@@ -1719,7 +1722,7 @@ a.button:hover {
   .couple_story_section .couple_story_item {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    padding-top: 100px;
+    padding-top: 60px;
   }
 }
 
@@ -1779,15 +1782,18 @@ a.button:hover {
   }
 }
 
-.couple_story_section .couple_story_item .couple_img_wrap .clip-shape {
+/* .couple_story_section .couple_story_item .couple_img_wrap .clip-shape {
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   top: -25px;
   z-index: -1;
-}
+} */
+.couple_story_content_inner p{
+    z-index: 3;
 
+}
 .couple_story_section .couple_story_item .couple_img_wrap .couple_img_shape {
   position: absolute;
   width: 100%;
@@ -1812,12 +1818,14 @@ a.button:hover {
   }
 }
 
-.couple_story_section .couple_story_item .couple_story_content {
+.couple_story_section .couple_story_item .couple_story_content  {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
   position: relative;
   max-width: 450px;
+  /* padding-top: 100px; */
 }
+
 
 @media (max-width: 991px) {
   .couple_story_section .couple_story_item .couple_story_content {
@@ -1841,7 +1849,8 @@ a.button:hover {
 
 @media (max-width: 575px) {
   .couple_story_section .couple_story_item .couple_story_content {
-    padding: 10px;
+    padding: 5px;
+    /* margin-top: 5px; */
   }
 }
 
@@ -1952,63 +1961,6 @@ a.button:hover {
     -moz-order: unset;
   }
 }
-
-/* .couple_story_section .couple_story_item:nth-child(even) .couple_story_content {
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
-  -webkit-order: 1;
-  -moz-order: 1;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  margin-left: 0;
-  position: relative;
-  padding-left: 0;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  margin: auto;
-  margin-top: 70px;
-} */
-
-/* @media (max-width: 991px) {
-  .couple_story_section .couple_story_item:nth-child(even) .couple_story_content {
-    padding: 20px;
-    -webkit-box-ordinal-group: unset;
-        -ms-flex-order: unset;
-            order: unset;
-    -webkit-order: unset;
-    -moz-order: unset;
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    margin-right: 0;
-    text-align: center;
-    flex-basis: 100%;
-    position: relative;
-    max-width: 100%;
-  }
-}
-
-@media (max-width: 575px) {
-  .couple_story_section .couple_story_item:nth-child(even) .couple_story_content {
-    padding: 10px;
-    margin-top: 30px;
-  }
-}
-
-.couple_story_section .couple_story_item:nth-child(even) .couple_story_content .couple_story_content-inner {
-  position: relative;
-  text-align: right;
-  max-width: 450px;
-}
-
-@media (max-width: 991px) {
-  .couple_story_section .couple_story_item:nth-child(even) .couple_story_content .couple_story_content-inner {
-    max-width: 100%;
-    text-align: center;
-  }
-} */
-
 
 /* end test couple story */
 /* Personal interactive effect mobile*/
@@ -2217,7 +2169,7 @@ a.button:hover {
 }
 
 .info-title h3 {
-    padding: 90px 0px 0px 0px;
+    padding: 90px 0px;
     text-transform: uppercase;
     font-family: 'Playfair Display';
     font-weight: 400px;
