--- a/static/style/master.css
+++ b/static/style/master.css
@@ -2240,14 +2240,15 @@ a.button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 50vh;
+    /* min-height: 50vh; */
     background-color: #F1F3EE;
     margin: 0;
     overflow: hidden; 
+    padding: 80px 0 130px 0;
 }
 @media (max-width: 480px) {
   .couple_slide_img {
-    padding-bottom: 50px; 
+    padding-bottom: 100px; 
   }
 }
 /* --- Gallery Styling --- */
@@ -2419,7 +2420,7 @@ a.button:hover {
 .filmroll {
     height: 400px;
     width: auto;
-    background-image: url('..//img/rain.jpg');
+    background-image: url('../img/rain.jpg');
     background-size: cover;
     margin: auto;
     filter: grayscale(80%);
@@ -2440,7 +2441,7 @@ a.button:hover {
     .filmroll {
         height: 800px;
         max-width: 100%;
-        background-image: url('../img/wallpaperbetter.jpg');
+        background-image: url('../img/14.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -2450,8 +2451,8 @@ a.button:hover {
 @media (max-width: 767px) {
     .filmroll {
         height: 450px;
-        max-width: 100%;
-        background-image: url('../img/wallpaperbetter.jpg');
+        width: auto;
+        background-image: url('../img/14.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
